# python-gendiff-utility

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  build_diff.py  format_diff.py  generate_diff.py  parser.py  render.py
gendiff/format_diff/: __init__.py  plain.py  stylish.py  transform_value.py
gendiff/formatters/: stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: file1.yaml  nested_file1.yaml  nested_file2.yml  nested_json_result
